--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=carstore
+spring.data.mongodb.uri=mongodb://admin:asd@172.19.0.2:27017/
+spring.data.mongodb.database=car-store
+
